--- a/package.json
+++ b/package.json
@@ -2,14 +2,17 @@
   "name": "contactsapp",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://cwiggan.github.io/contactsapp",
   "dependencies": {
     "axios": "^0.18.0",
+    "gh-pages": "^1.2.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4"
   },
   "scripts": {
+    "deploy": "npm run build&&gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
